--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -68,7 +68,7 @@ At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](http
 ### Milestone 1.5 
 #### Add Light Hotspot to Blockchain
 
-* **Target Completion: End of March**
+* **Target Completion: Mid-April**
 * **Status: IN DEVELOPMENT**
 
 
@@ -79,7 +79,7 @@ At this phase, Light Hotspots will be onboarded using the [Helium Wallet CLI](ht
 ### Milestone 2
 #### Paid Packet Forwarding
 
-* **Target Completion: April/May**
+* **Target Completion: May/June**
 * **Status: NOT YET STARTED**
 
 All Light Hotspots will be able to earn HNT for packet forwarding. 
