add mappers newsletter link

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -12,7 +12,7 @@ coverage mapping from voluntary community contributors. Mapping data is viewable
 at [mappers.helium.com](https://mappers.helium.com/). 
 
 :::info
-Join the discussion in the dedicated #coverage-mapping channel on the [Helium Discord Server](https://discord.gg/helium).
+Join the Mappers [newsletter](https://www.helium.com/mappers) and discussion in the dedicated #coverage-mapping channel on the [Helium Discord Server](https://discord.gg/helium).
 :::
 
 ## Go Deeper with Coverage Mapping
