--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -48,8 +48,7 @@ channels are the two most relevant for developers using the Network.
 	    	<h3>Devices</h3>
 	    	<p className="podtext">Purchase and customize Helium-enabled devices or prototype and build your own.</p>
 	    	<h5>Quick Links</h5>
-	    	<a className="block" href="/use-the-network/devices/ready-to-use/"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Ready to Use</a>
-	    	<a className="block" href="/use-the-network/devices/development"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Development and Prototyping</a>
+	    	<a className="block" href="/use-the-network/devices/"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Devices</a>
 	   
 	    </div>
 	    <div class="col col--6 " style={{marginBottom: 100}}>
