create menu for guides

--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -1,9 +1,9 @@
 ---
-id: dragino-light-hotspot
-title: Dragino LoRaWAN Gateway Setup
+id: dragino
+title: Dragino Light Hotspot Setup
 hide_title: true
-sidebar_label: Dragino LoRaWAN Gateways
-slug: /mine-hnt/light-hotspots/lorawan-gateways
+sidebar_label: Dragino LPS80/DLOS8
+slug: /mine-hnt/light-hotspots/guides/dragino
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
