--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -1,8 +1,8 @@
 ---
 id: light-hotspots
-title: Light Hotspots - Beta
+title: Light Hotspots (Beta)
 hide_title: true
-sidebar_label: Light Hotspots - BETA
+sidebar_label: Light Hotspots (Beta)
 slug: /mine-hnt/light-hotspots
 ---
 
@@ -24,6 +24,9 @@ For real-time development and community support of Light Hotspots, please join t
 
 :::
 
+## Light Hotspot Setup Guides
+
+- [Dragino LPS80/DLOS8](/mine-hnt/light-hotspots/guides/dragino)
 
 ## What is a Light Hotspot?
 
