--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Validator nodes earn rewards for work performed while in the consensus group.
 
-Validator nodes start with a base score 1.0. The network uses the score to choose which validator nodes join, and when they are removed from the consensus group.
+Upon joining the Network, validator nodes start with a base score `1.0`. The network uses the score to choose which validator nodes join consensus, and when they are removed from the consensus group.
 
 The score naturally increases when a validator node joins the consensus group and for each round it remains in it.
 
