--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -15,7 +15,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Upon joining the Network, validator nodes start with a base score `1.0`. The network uses the score to choose which validator nodes join consensus, and when they are removed from the consensus group.
 
-The score naturally increases when a validator node joins the consensus group and for each round it remains in it.
+After being elected to the consensus group, a validator node's score increases for each round it remains in the group. 
 
 After the validator node is unelected from the consensus group, over time its score reverts back to 1.0.
 
