--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -17,7 +17,7 @@ Upon joining the Network, validator nodes start with a base score `1.0`. The net
 
 After being elected to the consensus group, a validator node's score increases for each round it remains in the group. 
 
-After the validator node is unelected from the consensus group, over time its score reverts back to 1.0.
+After the validator node is unelected from the consensus group, its score will naturally revert towards 1.0.
 
 | Score | Join or remain in consensus group |
 | --- | :---: |
