--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -11,10 +11,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::warning
 
-The ability to mine HNT with anything other than
-[Approved Hotspots](https://helium.com/mine) is not supported. Please join the
-#diy-packet-forwarder in the [Helium Discord Server](https://discord.gg/helium)
-for the latest updates.
+Packet forwarders will only earn from data transfer. Do not attempt to build one unless 
+you wish to run sensors or convert existing hardware to use data on the helium network.
+The ability to mine fully mine HNT with anything other than an [Approved Hotspots](https://helium.com/mine) 
+is not supported.
 
 :::
 
