--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -28,6 +28,7 @@ Before we begin, you should have the following:
 - installed Docker
 - you have some spare HNT to burn ($10-100 worth), for funding your OUI address
 - an Auth0 account for user account management
+- at least an AWS t2.xlarge (or equivalent), especially if running both Console and its backend (Router) on one server.
 
 Optionally, you should also:
 
