remove htcc-ab02s variants

--- a/docs/use-the-network/devices/development/heltec/cubecell-gps-6502.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-gps-6502.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-gps-6502-class-a-otaa
+id: cubecell-gps-6502
 hide_title: true
-title: HTCC-AB02S(Class A OTAA)
+title: HTCC-AB02S
 description: HTCC-AB02S is a Dev-Board. Already integrated AIR530 GPS module, friendly designed for developers, easy to verify communication solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-gps-6502.png
-sidebar_label: HTCC-AB02S(Class A OTAA)
-slug: /use-the-network/devices/development/heltec/cubecell-gps-6502-class-a-otaa
+sidebar_label: HTCC-AB02S
+slug: /use-the-network/devices/development/heltec/cubecell-gps-6502
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AB02S(Class A OTAA)
+## HTCC-AB02S
 
 HTCC-AB02S is a Dev-Board. Already integrated AIR530 GPS module, friendly designed for developers, easy to verify communication solutions.
 
