remove htcc-ab01 variants

--- a/docs/use-the-network/devices/development/heltec/cubecell-dev-board.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-dev-board.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-dev-board-class-c-otaa
+id: cubecell-dev-board
 hide_title: true
-title: HTCC-AB01(Class C OTAA)
+title: HTCC-AB01
 description: HTCC-AB01 is a Dev-Board. Friendly designed for developers, easy to verify communication solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-dev-board.png
-sidebar_label: HTCC-AB01(Class C OTAA)
-slug: /use-the-network/devices/development/heltec/cubecell-dev-board-class-c-otaa
+sidebar_label: HTCC-AB01
+slug: /use-the-network/devices/development/heltec/cubecell-dev-board
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AB01(Class C OTAA)
+## HTCC-AB01
 
 HTCC-AB01 is a Dev-Board. Friendly designed for developers, easy to verify communication solutions.
 
