removed remaining heltec duplicates

--- a/docs/use-the-network/devices/development/heltec/cubecell-capsule-sensor.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-capsule-sensor.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-capsule-sensor-class-a-otaa
+id: cubecell-capsule-sensor
 hide_title: true
-title: HTCC-AC01(Class A OTAA)
+title: HTCC-AC01
 description: HTCC-AC01 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be deployed directly into real-world applications.
 image: img/use-the-network/devices/development/heltec/cubecell-capsule-sensor.png
-sidebar_label: HTCC-AC01(Class A OTAA)
-slug: /use-the-network/devices/development/heltec/cubecell-capsule-sensor-class-a-otaa
+sidebar_label: HTCC-AC01
+slug: /use-the-network/devices/development/heltec/cubecell-capsule-sensor
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AC01(Class A OTAA)
+## HTCC-AC01
 
 HTCC-AC01 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be deployed directly into real-world applications.
 
