--- a/docs/use-the-network/devices/development/heltec/lora-kit-151.mdx
+++ b/docs/use-the-network/devices/development/heltec/lora-kit-151.mdx
@@ -1,16 +1,16 @@
 ---
-id: lora-kit-151-class-a-abp
+id: lora-kit-151
 hide_title: true
-title: LoRa Kit 151(Class A ABP)
+title: LoRa Kit 151
 description: LoRa Kit 151 is Ultra-Low-Power and standard LoRaWAN protocol,
 image: img/use-the-network/devices/development/heltec/lora-kit-151.png
-sidebar_label: LoRa Kit 151(Class A ABP)
-slug: /use-the-network/devices/development/heltec/lora-kit-151-class-a-abp
+sidebar_label: LoRa Kit 151
+slug: /use-the-network/devices/development/heltec/lora-kit-151
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## LoRa Kit 151(Class A ABP)
+## LoRa Kit 151
 
 LoRa Kit 151 is Ultra-Low-Power and standard LoRaWAN protocol,
 
