--- a/docs/use-the-network/devices/development/heltec/wifi-lora-32.mdx
+++ b/docs/use-the-network/devices/development/heltec/wifi-lora-32.mdx
@@ -1,16 +1,16 @@
 ---
-id: wifi-lora-32-class-a-abp
+id: wifi-lora-32
 hide_title: true
-title: WiFi LoRa 32 (V2)(Class A ABP)
+title: WiFi LoRa 32 (V2)
 description: WiFi LoRa 32 is a classic IoT dev-board
 image: img/use-the-network/devices/development/heltec/wifi-lora-32.png
-sidebar_label: WiFi LoRa 32 (V2)(Class A ABP)
-slug: /use-the-network/devices/development/heltec/wifi-lora-32-class-a-abp
+sidebar_label: WiFi LoRa 32 (V2)
+slug: /use-the-network/devices/development/heltec/wifi-lora-32
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## WiFi LoRa 32 (V2)(Class A ABP)
+## WiFi LoRa 32 (V2)
 
 WiFi LoRa 32 is a classic IoT dev-board
 
