--- a/docs/use-the-network/devices/development/heltec/wireless-stick-lite.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-stick-lite.mdx
@@ -1,16 +1,16 @@
 ---
-id: wireless-stick-lite-class-c-abp
+id: wireless-stick-lite
 hide_title: true
-title: Wireless Stick Lite (Panda Board)(Class C ABP)
+title: Wireless Stick Lite (Panda Board)
 description: Compare with Wireless Stick, “Wireless Stick Lite” has much better low power design (30uA in deep sleep)
 image: img/use-the-network/devices/development/heltec/wireless-stick-lite.png
-sidebar_label: Wireless Stick Lite (Panda Board)(Class C ABP)
-slug: /use-the-network/devices/development/heltec/wireless-stick-lite-class-c-abp
+sidebar_label: Wireless Stick Lite (Panda Board)
+slug: /use-the-network/devices/development/heltec/wireless-stick-lite
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Wireless Stick Lite (Panda Board)(Class C ABP)
+## Wireless Stick Lite (Panda Board)
 
 Compare with Wireless Stick, “Wireless Stick Lite” has much better low power design (30uA in deep sleep)
 
