--- a/docs/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-1-2-aa-node-class-a-otaa
+id: cubecell-1-2-aa-node
 hide_title: true
-title: HTCC-AB02A(Class A OTAA)
+title: HTCC-AB02A
 description: HTCC-AB02A is a Dev-Board. Friendly designed for developers, easy to verify communication solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-1-2-aa-node.png
-sidebar_label: HTCC-AB02A(Class A OTAA)
-slug: /use-the-network/devices/development/heltec/cubecell-1-2-aa-node-class-a-otaa
+sidebar_label: HTCC-AB02A
+slug: /use-the-network/devices/development/heltec/cubecell-1-2-aa-node
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AB02A(Class A OTAA)
+## HTCC-AB02A
 
 HTCC-AB02A is a Dev-Board. Friendly designed for developers, easy to verify communication solutions.
 
