--- a/docs/use-the-network/devices/development/heltec/cubecell-dev-board-plus.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-dev-board-plus.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-dev-board-plus-class-c-abp
+id: cubecell-dev-board-plus
 hide_title: true
-title: HTCC-AB02(Class C ABP)
+title: HTCC-AB02
 description: HTCC-AB02 is a Dev-Board. Friendly designed for developers, easy to verify communication solutions.
 image: img/use-the-network/devices/development/heltec/cubecell-dev-board-plus.png
-sidebar_label: HTCC-AB02(Class C ABP)
-slug: /use-the-network/devices/development/heltec/cubecell-dev-board-plus-class-c-abp
+sidebar_label: HTCC-AB02
+slug: /use-the-network/devices/development/heltec/cubecell-dev-board-plus
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AB02(Class C ABP)
+## HTCC-AB02
 
 HTCC-AB02 is a Dev-Board. Friendly designed for developers, easy to verify communication solutions.
 
