--- a/docs/use-the-network/devices/development/heltec/cubecell-module-plus.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-module-plus.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-module-plus-class-a-otaa
+id: cubecell-module-plus
 hide_title: true
-title: HTCC-AM02(Class A OTAA)
+title: HTCC-AM02
 description: HTCC-AM02 is a Module. Supports AT transparent transmission commands, can be directly integrated into the application circuit.
 image: img/use-the-network/devices/development/heltec/cubecell-module-plus.png
-sidebar_label: HTCC-AM02(Class A OTAA)
-slug: /use-the-network/devices/development/heltec/cubecell-module-plus-class-a-otaa
+sidebar_label: HTCC-AM02
+slug: /use-the-network/devices/development/heltec/cubecell-module-plus
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AM02(Class A OTAA)
+## HTCC-AM02
 
 HTCC-AM02 is a Module. Supports AT transparent transmission commands, can be directly integrated into the application circuit.
 
