--- a/docs/use-the-network/devices/development/heltec/cubecell-module.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-module.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-module-class-a-otaa
+id: cubecell-module
 hide_title: true
-title: HTCC-AM01(Class A OTAA)
+title: HTCC-AM01
 description: HTCC-AM01 is a Module. Supports AT transparent transmission commands, can be directly integrated into the application circuit.
 image: img/use-the-network/devices/development/heltec/cubecell-module.png
-sidebar_label: HTCC-AM01(Class A OTAA)
-slug: /use-the-network/devices/development/heltec/cubecell-module-class-a-otaa
+sidebar_label: HTCC-AM01
+slug: /use-the-network/devices/development/heltec/cubecell-module
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AM01(Class A OTAA)
+## HTCC-AM01
 
 HTCC-AM01 is a Module. Supports AT transparent transmission commands, can be directly integrated into the application circuit.
 
