--- a/docs/use-the-network/devices/development/heltec/cubecell-solar-sensor.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-solar-sensor.mdx
@@ -1,16 +1,16 @@
 ---
-id: cubecell-solar-sensor-class-c-abp
+id: cubecell-solar-sensor
 hide_title: true
-title: HTCC-AC02(Class C ABP)
+title: HTCC-AC02
 description: HTCC-AC02 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be deployed directly into real-world applications.
 image: img/use-the-network/devices/development/heltec/cubecell-solar-sensor.png
-sidebar_label: HTCC-AC02(Class C ABP)
-slug: /use-the-network/devices/development/heltec/cubecell-solar-sensor-class-c-abp
+sidebar_label: HTCC-AC02
+slug: /use-the-network/devices/development/heltec/cubecell-solar-sensor
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## HTCC-AC02(Class C ABP)
+## HTCC-AC02
 
 HTCC-AC02 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be deployed directly into real-world applications.
 
