--- a/docs/use-the-network/devices/development/heltec/lora-node-151.mdx
+++ b/docs/use-the-network/devices/development/heltec/lora-node-151.mdx
@@ -1,16 +1,16 @@
 ---
-id: lora-node-151-class-c-otaa
+id: lora-node-151
 hide_title: true
-title: LoRa Node 151(Class C OTAA)
+title: LoRa Node 151
 description: LoRa Node 151， adopting the STM32L151CCU6 MCU (support DFU mode) and SX127x LoRa chip, use 1/2 AA Lithium chlorine sulfite battery
 image: img/use-the-network/devices/development/heltec/lora-node-151.png
-sidebar_label: LoRa Node 151(Class C OTAA)
-slug: /use-the-network/devices/development/heltec/lora-node-151-class-c-otaa
+sidebar_label: LoRa Node 151
+slug: /use-the-network/devices/development/heltec/lora-node-151
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## LoRa Node 151(Class C OTAA)
+## LoRa Node 151
 
 LoRa Node 151， adopting the STM32L151CCU6 MCU (support DFU mode) and SX127x LoRa chip, use 1/2 AA Lithium chlorine sulfite battery
 
