--- a/docs/use-the-network/devices/development/heltec/turtle-board.mdx
+++ b/docs/use-the-network/devices/development/heltec/turtle-board.mdx
@@ -1,16 +1,16 @@
 ---
-id: turtle-board-class-a-abp
+id: turtle-board
 hide_title: true
-title: Turtle Board(Class A ABP)
+title: Turtle Board
 description: The turnkey Turtle board solution can be used immediately. Support standard LoRaWAN protocol and RadioShuttle protocol.
 image: img/use-the-network/devices/development/heltec/turtle-board.png
-sidebar_label: Turtle Board(Class A ABP)
-slug: /use-the-network/devices/development/heltec/turtle-board-class-a-abp
+sidebar_label: Turtle Board
+slug: /use-the-network/devices/development/heltec/turtle-board
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Turtle Board(Class A ABP)
+## Turtle Board
 
 The turnkey Turtle board solution can be used immediately. Support standard LoRaWAN protocol and RadioShuttle protocol.
 
