--- a/docs/use-the-network/devices/development/heltec/wireless-shell.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-shell.mdx
@@ -1,16 +1,16 @@
 ---
-id: wireless-shell-class-c-abp
+id: wireless-shell
 hide_title: true
-title: Wireless Shell(Class C ABP)
+title: Wireless Shell
 description: “Wireless Shell” is an ESP32-PICO + SX1276 module. provide Wi-Fi, BLE and LoRa solution.
 image: img/use-the-network/devices/development/heltec/wireless-shell.png
-sidebar_label: Wireless Shell(Class C ABP)
-slug: /use-the-network/devices/development/heltec/wireless-shell-class-c-abp
+sidebar_label: Wireless Shell
+slug: /use-the-network/devices/development/heltec/wireless-shell
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Wireless Shell(Class C ABP)
+## Wireless Shell
 
 “Wireless Shell” is an ESP32-PICO + SX1276 module. provide Wi-Fi, BLE and LoRa solution.
 
