--- a/docs/use-the-network/devices/development/heltec/wireless-stick.mdx
+++ b/docs/use-the-network/devices/development/heltec/wireless-stick.mdx
@@ -1,16 +1,16 @@
 ---
-id: wireless-stick-class-c-otaa
+id: wireless-stick
 hide_title: true
-title: Wireless Stick (Gecko Board)(Class C OTAA)
+title: Wireless Stick (Gecko Board)
 description: Wireless Stick (Gecko Board) is high performance and small size
 image: img/use-the-network/devices/development/heltec/wireless-stick.png
-sidebar_label: Wireless Stick (Gecko Board)(Class C OTAA)
-slug: /use-the-network/devices/development/heltec/wireless-stick-class-c-otaa
+sidebar_label: Wireless Stick (Gecko Board)
+slug: /use-the-network/devices/development/heltec/wireless-stick
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Wireless Stick (Gecko Board)(Class C OTAA)
+## Wireless Stick (Gecko Board)
 
 Wireless Stick (Gecko Board) is high performance and small size
 
