add docs for Kerlink light gateways

--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -27,6 +27,7 @@ For real-time development and community support of Light Hotspots, please join t
 ## Light Hotspot Setup Guides
 
 - [Dragino LPS80/DLOS8](/mine-hnt/light-hotspots/guides/dragino)
+- [Kerlink gateways](/mine-hnt/light-hotspots/guides/kerlink)
 
 ## What is a Light Hotspot?
 
