packet forwarder warning link to light gateways
describe they cant earn PoC from packet forwarders (link to Poc) and added a link to light gateways for existing hardware users

--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -11,10 +11,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::warning
 
-Packet forwarders will only earn from data transfer. Do not attempt to build one unless 
-you wish to run sensors or convert existing hardware to use data on the helium network.
-The ability to mine fully mine HNT with anything other than an [Approved Hotspots](https://helium.com/mine) 
-is not supported.
+The ability to earn from [PoC]https://docs.helium.com/blockchain/proof-of-coverage with anything other than an [Approved Hotspots](https://helium.com/mine) 
+is not supported. Packet forwarders are designed for sensor developers to test usage without needing a hotspot. If your interested in using the Helium network and earning from data transfer from your existing hardware, please check out the [Light Gateways Roadmap]https://docs.helium.com/mine-hnt/light-hotspots/
 
 :::
 
