--- a/docs/mine-hnt/validators/validator-faqs-resources.mdx
+++ b/docs/mine-hnt/validators/validator-faqs-resources.mdx
@@ -116,3 +116,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [HNT Validators](https://www.hntvalidators.com)
 * [Managed Helium Validator Service](https://heliumvalidators.com)
 * [StakeMyHNT](https://www.stakemyhnt.com)
+* [Helium Staking](https://www.helium-staking.com)
