updates on unstaking
unstaking update based on recent wallet ver

--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -61,13 +61,19 @@ As part of the staking process the validator node address needs to be in the sta
     In this example the part following the final slash is the validator node's public address: ```112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi```.
 
 * Stake the TNT:
-    * ```./helium-wallet validators stake <public-address> 10000 --commit```
+    * ```./helium-wallet validators stake <public-address> 10000```
+
+Use `--commit` after preview to submit the transaction to network. 
 
 ### Unstake Tokens
 If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. The cooldown period will be shortened for the testnet to 360 blocks (approx. an hour).
+You need to include the stake release block height which should be at least the current block height plus the cooldown period, and 5-10 blocks to allow for chain processing delays. For example, if the current block height was 5000, you'd add 260,000 (250,000 plus 10 for delays) for a stake release height value of 265,000.  
+
 
 #### To unstake tokens from a validator node perform the following:
-```./helium-wallet validators unstake <public-address> --commit```
+```./helium-wallet validators unstake <public-address> --stake-release-height <stake release height>```
+
+Use `--commit` after previewing to submit the transaction to network. 
 
 ### Transfer stake 
 A validator node's stake can be transferred to other validator nodes in the same wallet or a different one. 
@@ -76,7 +82,9 @@ If the stake is transferred to a validator node in a different wallet, the owner
 
 
 #### To transfer stake to a new validator node in the same wallet:
-```./helium-wallet validators transfer create --new-address <new-public-address> --old-address <old-public-address> --commit```
+```./helium-wallet validators transfer create --new-address <new-public-address> --old-address <old-public-address>```
+
+Use `--commit` after previewing to submit the transaction to network. 
 
 This will produce an output similar to the following:
 
