--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -58,7 +58,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
      <div class="col col--6 borderTop" >
      <div>
         <h3>Build a Helium Packet Forwarder</h3>
-        	<p style={{marginBottom:50}}>As of today, only approved Hotspots can participate in mining $HNT. However, <a href="https://www.helium.com/mine">any LoRaWAN Gateway can be converted to route packets</a> to route packets to the Helium Network for development and production applications.</p>
+        	<p style={{marginBottom:50}}>As of today, only approved Hotspots can participate in mining $HNT. However, <a href="https://www.helium.com/mine">any LoRaWAN Gateway can be converted to route packets</a> to the Helium Network for development and production applications.</p>
         </div>
     </div>
     </div>
