--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -65,20 +65,20 @@ The details of the HoneyBadgerBFT protocol used is out of scope for this documen
 **Seen Penalties**
 * This penalty can occur if a majority of other Validators in the consensus group report your Validator as not being "seen"
 * This is equivalent to the Validator being offline, not available, or not responding to the group.
-* This is a penalty of `0.33` for each occurrence
-* This is a chain variable, able to be viewed by `miner ledger variables election_seen_penalty`
+* This penalty is applied for each occurrence, which can happen multiple times during an consensus group.
+* The amount applied per occurrence is a chain variable, currently set at `0.33`. The variable is viewable by running `miner ledger variables election_seen_penalty`.
 
 **BBA Penalties**
 * This penalty can occur when the Validator is seen but fails to contribute a bundle of transactions and metadata to the block.  
 * Acquiring this penalty usually means the Validator is slow/underpowered, or poorly connected.
-* this is a penalty of `0.1` for each occurrence
-* This is a chain variable, able to be viewed by `miner ledger variables election_bba_penalty`
+* This penalty is applied for each occurrence, which can happen multiple times during an consensus group.
+* The amount applied per occurrence is a chain variable, currently set at `0.1`. The variable is viewable by running `miner ledger variables election_bba_penalty`.
 
 **DKG Penalties**
 * This penalty can occur if an election fails, and the Validator was part of the reason for the election to fail.
 * At the end of the election, all Validators vote and sign the election result.  If the election fails, Validators that a majority agree did not sign the election results are penalized.
-* This is a penalty of `1.0` for each occurrence
-* Thiis is a chain variable, able to be viewed by running `miner ledger variables dkg_penalty`
+* This penalty is applied once per consensus.
+* The amount applied is a chain variable, currently set at `1.0`. The variable is viewable by running `miner ledger variables dkg_penalty`.
 
 
 ## Penalty Decay
