Clarify how to use cursor

--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -34,7 +34,7 @@ In order to return data quickly and reduce the load on the API, a `cursor` may
 be returned from an API request. The documentation for each route will indicate
 whether the result is paged with a cursor.
 
-The request the next page of results add a cursor URL parameter to the URL that
+In order to request the next page of results, add a cursor URL parameter to the URL that
 was used to make the first request.
 
 For example:
